Bug 1226877 - make collapsed details pane hidden using visibility: hidden to be inaccessible by both keyboard and a11y tools. r=bgrins
MozReview-Commit-ID: 4DxnGDpRLHf

UltraBlame original commit: b45c5745abc0cd63b8352465f4a1db907a423779

--- a/devtools/client/netmonitor/netmonitor.css
+++ b/devtools/client/netmonitor/netmonitor.css
@@ -7,6 +7,14 @@
   overflow: hidden;
 }
 
+
+
+
+
+#details-pane.pane-collapsed {
+  visibility: hidden;
+}
+
 #details-pane-toggle[disabled] {
   display: none;
 }
@@ -36,7 +44,6 @@
 @media (max-width: 700px) {
   #toolbar-spacer,
   #details-pane-toggle,
-  #details-pane.pane-collapsed,
   .requests-menu-waterfall,
   #requests-menu-network-summary-button > .toolbarbutton-text {
     display: none;
